# AutoConf

./: Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  libtool
Learn/: README.md  config.status  configure
Learn/autom4te.cache/: output.1  requests  traces.2
arx/: configure  configure.ac
arx/Learn/: Makefile  Makefile.am  configure  configure.ac
arx/Learn/autom4te.cache/: requests  traces.1  traces.2
arx/Learn/include/: stamp-h1
arx/autom4te.cache/: output.0  output.1  requests  traces.0  traces.2
arx/include/: learn.h.in
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
include/: Makefile  Makefile.in  learn.h
lib/: Makefile  Makefile.am  Makefile.am~  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  hello  main.c
