AC_INIT([learn], [0.01], [pdutta.phy@itbhu.ac.in], [learn], [http://iitbhu.ac.in])

AC_PREREQ([2.69])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([include/learn.h])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_FILES([Makefile])
AC_PROG_CC


AC_OUTPUT(Makefile)
